# Meguuumin

./: LICENSE  logging_config.py  main.py  pyproject.toml
cogs/: __init__.py  champion_rotations.py  greetings.py  summoner.py  ultility.py
data/: __init__.py  get_champion_rotations.py  get_summoner.py
